package App;

public enum TipoCombustible {

    GASOLINA, DIESEL, HÍBRIDO, ELÉCTRICO
}
