package App;

public enum Traccion {

    DELANTERA, TRASERA, CUATRO_X_CUATRO
}
