@startuml Coche
class Coche{
-numPuertas : int
-tipoCombustible : TipoCombustible
-capacidadMaletero : int
-traccion : Traccion
}

enum TipoCombustible{
    GASOLINA
    DIESEL
    HIBRIDO
    ELECTRICO
}
enum Traccion{
    DELANTERA
    TRASERA
    4X4
}

Coche --|> Vehiculo
Coche --> TipoCombustible
Coche --> Traccion

@enduml